REGRESSION(r266677): ASSERTION FAILED in PaintFrequencyTracker::end() https://bugs.webkit.org/show_bug.cgi?id=216591 <rdar://problem/68635418>

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2020-09-15
Reviewed by Simon Fraser.

Source/WebCore:

Make RenderLayer track the painting which is scheduled through
RenderingUpdateScheduler only. We can do this by (1) reseting Page::
m_renderingUpdateTimestamp at the end of Page::updateRendering() and (2)
making SinglePaintFrequencyTracking track the painting only if the
timestamp is not zero.

* page/ChromeClient.h:
(WebCore::ChromeClient::timestampForPaintFrequencyTracking const): Deleted.
* page/Page.cpp:
(WebCore::Page::updateRendering):
* page/Page.h:
(WebCore::Page::renderingUpdateTimestamp const):
(WebCore::Page::lastRenderingUpdateTimestamp const): Deleted.
* rendering/PaintFrequencyTracker.h:
(WebCore::SinglePaintFrequencyTracking::SinglePaintFrequencyTracking):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):
(WebCore::RenderLayer::calculateClipRects const):

Source/WebKit:

timestampForPaintFrequencyTracking() do not have to be in ChromeClient.
RenderLayer can access it through its page(). No need to special case
isSVGImageChromeClient() because we are going to track the painting that
goes through Page::updateRendering(). This means all the painting of the
SVG image RenderLayers will be tracked by the same timestamp. Currently
we do not support compositing inside the SVG image which means there is
only one RenderLayer per SVG image.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::timestampForPaintFrequencyTracking const): Deleted.
* WebProcess/WebCoreSupport/WebChromeClient.h:

Canonical link: https://commits.webkit.org/229413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267137 268f45cc-cd09-0410-ab3c-d52691b4dbfc