Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.h
@@ -333,8 +333,6 @@ private:
 
     bool shouldUseTiledBackingForFrameView(const WebCore::FrameView&) const final;
 
-    MonotonicTime timestampForPaintFrequencyTracking() const final;
-
     void isPlayingMediaDidChange(WebCore::MediaProducer::MediaStateFlags, uint64_t) final;
     void handleAutoplayEvent(WebCore::AutoplayEvent, OptionSet<WebCore::AutoplayEventFlags>) final;
 
